--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -12,7 +12,7 @@
 <div th:replace="~{fragments/header :: header}"></div>
 
 <div class="d-flex">
-    <div th:replace="~{fragments/side-pannel :: aside}"></div>
+    <div th:replace="~{fragments/side-panel :: aside}"></div>
     <div class="container shadow mb-5 bg-body rounded" style="margin-top: 30px; margin-left: 50px;">
         <h2>Users List</h2>
         <table class="table table-bordered table-striped" id="users-table">
