--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -9,41 +9,21 @@
     <link href="https://cdn.datatables.net/v/bs5/jq-3.7.0/dt-1.13.6/datatables.min.css" rel="stylesheet">
 </head>
 <body>
+
+
+
 <div th:replace="~{fragments/header :: header}"></div>
 
 <div class="d-flex">
     <div th:replace="~{fragments/side-panel :: aside}"></div>
     <div class="container shadow mb-5 bg-body rounded" style="margin-top: 30px; margin-left: 50px;">
         <h2>Users List</h2>
-        <!-- Button to Open the Modal -->
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
-            Open modal
-        </button>
 
-        <!-- The Modal -->
-        <div class="modal" id="myModal">
-            <div class="modal-dialog">
-                <div class="modal-content">
 
-                    <!-- Modal Header -->
-                    <div class="modal-header">
-                        <h4 class="modal-title">Modal Heading</h4>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                    </div>
+        <a th:href="@{/users/add-new}" class="btn btn-info mb-3">Add new User</a>
 
-                    <!-- Modal body -->
-                    <div class="modal-body">
-                        Modal body..
-                    </div>
 
-                    <!-- Modal footer -->
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-                    </div>
 
-                </div>
-            </div>
-        </div>
         <table class="table table-bordered table-striped" id="users-table">
             <thead>
             <tr>
@@ -59,16 +39,31 @@
                 <td th:text="${user.lastName}"></td>
                 <td th:text="${user.role}"></td>
                 <td>
-                    <a th:href="@{/show-update-form(userId=${user.id})}" class="btn btn-info">Update</a>
-                    <a th:href="@{/delete-user(userId=${user.id})}" class="btn btn-danger m-lg-2">Delete</a>
+                    <a th:href="@{/update-user(userId=${user.id})}" class="btn btn-info">Update</a>
+                    <button type="button" class="btn btn-danger m-lg-2" th:attr="onclick=|confirmDelete('${user.id}')|">Delete</button>
                 </td>
+
             </tr>
+
             </tbody>
+
         </table>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/v/bs5/jq-3.7.0/dt-1.13.6/datatables.min.js"></script>
-    <script>
+    <script th:inline="javascript">
+
+        function confirmDelete(userId) {
+            const confirmed = confirm('Are you sure you want to delete this user?');
+            if (confirmed) {
+                window.location.href = '/users/delete-user/' + userId;
+            }
+        }
+    </script>
+
+    <script >
+
+
         $(document).ready(function () {
             $("#users-table").DataTable(
                 {
