--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -11,7 +11,6 @@
 <body>
 
 
-
 <div th:replace="~{fragments/header :: header}"></div>
 
 <div class="d-flex">
@@ -19,10 +18,17 @@
     <div class="container shadow mb-5 bg-body rounded" style="margin-top: 30px; margin-left: 50px;">
         <h2>Users List</h2>
 
+        <div class="d-flex justify-content-between align-items-center mb-3">
+            <a th:href="@{/users/add-new}" class="btn btn-info mb-3">Add new User</a>
 
-        <a th:href="@{/users/add-new}" class="btn btn-info mb-3">Add new User</a>
-
-
+            <div class="mb-3">
+                <label for="selectRoleFilter" class="form-label">Filter by Role:</label>
+                <select id="selectRoleFilter" class="form-select" onchange="filterByRole(this.value)">
+                    <option value="">All Roles</option>
+                    <option th:each="role : ${roles}" th:value="${role}" th:text="${role}"></option>
+                </select>
+            </div>
+        </div>
 
         <table class="table table-bordered table-striped" id="users-table">
             <thead>
@@ -40,7 +46,9 @@
                 <td th:text="${user.role}"></td>
                 <td>
                     <a th:href="@{/users/update(userId=${user.id})}" class="btn btn-info">Update</a>
-                    <button type="button" class="btn btn-danger m-lg-2" th:attr="onclick=|confirmDelete('${user.id}')|">Delete</button>
+                    <button type="button" class="btn btn-danger m-lg-2" th:attr="onclick=|confirmDelete('${user.id}')|">
+                        Delete
+                    </button>
                 </td>
 
             </tr>
@@ -52,6 +60,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/v/bs5/jq-3.7.0/dt-1.13.6/datatables.min.js"></script>
     <script th:inline="javascript">
+        function filterByRole(role) {
+            $('#users-table')
+                .DataTable()
+                .column(2)
+                .search(role)
+                .draw();
+        }
 
         function confirmDelete(userId) {
             const confirmed = confirm('Are you sure you want to delete this user?');
@@ -61,7 +76,7 @@
         }
     </script>
 
-    <script >
+    <script>
 
 
         $(document).ready(function () {
@@ -72,7 +87,15 @@
                             'bSortable': false,
                             'aTargets': [-1]
                         }
-                    ]
+                    ],
+                    'initComplete': function () {
+                        var distinctRoles = Array.from(new Set($("#users-table").DataTable().column(2).data().toArray()));
+                        $("#selectRoleFilter").empty();
+                        $("#selectRoleFilter").append('<option value="">All Roles</option>');
+                        distinctRoles.forEach(function (role) {
+                            $("#selectRoleFilter").append('<option value="' + role + '">' + role + '</option>');
+                        });
+                    }
                 }
             );
         })
